add script.js and separate logic

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,7 +4,10 @@
 		<title>Pelea de Gallos</title>
 	</head>
 	<body>
-		<h1>paragraph example 1</h1>
-		<h3>paragraph example 2</h3>
+		<p>Gallo No 1 :</p>
+		<p id="local-display">Loading cock number 1...</p>
+		<p>Gallo No 2 :</p>
+		<p id="visitor-display">Loading cock number 2...</p>
+		<script src="script.js"></script>
 	</body>
 </html>
