add cock image and bet price

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,14 +12,17 @@
 			<div class="local">
 				<p class="title">Gallo No 1 :</p>
 				<p class="value" id="local-display">Loading...</p>		
-				<p class="unit"> %</p>
+				<img class="image" src="visitor.png">
 			</div>
 			<div class="visitor">
 				<p class="title">Gallo No 2 :</p>
 				<p class="value" id="visitor-display">Loading...</p>		
-				<p class="unit"> %</p>
+				<img class="image" src="local.png">
 			</div>
 		</div>	
+		<div class="bet">
+			<p class="text" id="apuesta-display">Loading...</p>
+		</div>
 		<script src="script.js"></script>
 	</body>
 </html>
