different folders for files

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,7 +4,7 @@
 		<title>Pelea de Gallos</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="style.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<header>Nombre Gallera Organizadora</header>
@@ -16,13 +16,13 @@
 			</div>
 			<div class="visitor">
 				<p class="title">Gallo No 2 :</p>
-				<p class="value" id="visitor-display">Loading...</p>		
+				<p class="value" id="visitor-display">Loading...</p>	
 				<img class="image" src="local.png">
 			</div>
 		</div>	
 		<div class="bet">
 			<p class="text" id="apuesta-display">Loading...</p>
 		</div>
-		<script src="script.js"></script>
+		<script src="js/script.js"></script>
 	</body>
 </html>
