add stopwatch, but not working...

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -23,6 +23,13 @@
 		<div class="bet">
 			<p class="text" id="apuesta-display">Loading...</p>
 		</div>
+		<div class="stopwatch">
+			<h1 id="timer">00 : 00 . 000</h1>	
+			<button id="toggle">Start</button>
+			<button id="reset">Reset</button>
+		</div>
+		<script src="js/stopwatch.js"></script>
+		<script src="js/main.js"></script>
 		<script src="js/script.js"></script>
 	</body>
 </html>
