clean all project...

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,33 +3,13 @@
 	<head>
 		<title>Pelea de Gallos</title>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
-		<header>Nombre Gallera Organizadora</header>
-		<div class="container">
-			<div class="local">
-				<p class="title">Gallo No 1 :</p>
-				<p class="value" id="local-display">Loading...</p>		
-				<img class="image" src="visitor.png">
+		<div class="container-1">
+			<div class="box-1">
+
 			</div>
-			<div class="visitor">
-				<p class="title">Gallo No 2 :</p>
-				<p class="value" id="visitor-display">Loading...</p>	
-				<img class="image" src="local.png">
-			</div>
-		</div>	
-		<div class="bet">
-			<p class="text" id="apuesta-display">Loading...</p>
 		</div>
-		<div class="stopwatch">
-			<h1 id="timer">00 : 00 . 000</h1>	
-			<button id="toggle">Start</button>
-			<button id="reset">Reset</button>
-		</div>
-		<script src="js/stopwatch.js"></script>
-		<script src="js/main.js"></script>
-		<script src="js/script.js"></script>
 	</body>
 </html>
