--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,30 +6,10 @@
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
-		<div class="container-1">
-			<div class="box-1">
-				<h3>Box One</h3>
-				<p>El castillo en el cual mi criado se le había ocurrido penetrar a la fuerza en vez de permitirme.</p>
-			</div>
-			<div class="box-2">
-				<h3>Box Two</h3>
-				<p>El castillo en el cual mi criado se le había ocurrido penetrar a la fuerza en vez de permitirme.</p>
-			</div>
-			<div class="box-3">
-				<h3>Box Three</h3>
-				<p>El castillo en el cual mi criado se le había ocurrido penetrar a la fuerza en vez de permitirme</p>
-			</div>
-		</div>
-		
-		<div class="container-2">
-			<div class="container-2-box">
-				<h3>Box Four</h3>
-				<p>El castillo en el cual mi criado se le había ocurrido penetrar a la fuerza en vez de permitirme</p>
-			</div>
-			<div class="container-2-box">
-				<h3>Box Five</h3>
-				<p>El castillo en el cual mi criado se le había ocurrido penetrar a la fuerza en vez de permitirme</p>
-			</div>	
+		<div class="container">
+			<div class="item uno"> </div>
+			<div class="item dos"> </div>
+			<div class="item tres"> </div>
 		</div>
 	</body>
 </html>
