--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,10 +6,17 @@
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
-		<div class="container">
-			<div class="item uno"> </div>
-			<div class="item dos"> </div>
-			<div class="item tres"> </div>
-		</div>
+		<div class="container">                
+		    	<div><h1>organizacion</h1></div>                   
+		    	<div>                              
+		    		 <div>                          
+					<div><h2>Gallo de Pelea No 1</h2></div>       
+			    		<div><h2>Gallo de Pelea No 1</h2></div>       
+				</div>                         
+				<div><h2>Gallo de Pelea No 2</h2></div>             
+		    	</div>                             
+		  	<div><h2>Valor Apuesta</h2></div>                    
+			<div><h2>Cronometro</h2></div>
+		</div>   
 	</body>
 </html>
