template error fixed..

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,10 +10,10 @@
 		    	<div><h1>organizacion</h1></div>                   
 		    	<div>                              
 		    		 <div>                          
-					<div><h2>Gallo de Pelea No 1</h2></div>       
-			    		<div><h2>Gallo de Pelea No 1</h2></div>       
+					<div>Gallo de Pelea No 1</div>       
+			    		<div>Gallo de Pelea No 1</div>       
 				</div>                         
-				<div><h2>Gallo de Pelea No 2</h2></div>             
+				<div>Gallo de Pelea No 2</div>             
 		    	</div>                             
 		  	<div><h2>Valor Apuesta</h2></div>                    
 			<div><h2>Cronometro</h2></div>
