--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>cock fight</title>
+		<title>Modern Web Layout - Grid Layout</title>
 		<link href="css/styles.css" rel="stylesheet">
 	</head>
 	<body>
